--- a/src/components/ActionsList/ActionsList.scss
+++ b/src/components/ActionsList/ActionsList.scss
@@ -1,3 +1,5 @@
+@import './../../variables.scss';
+
 .actions-list {
   display: flex;
   flex-direction: column;
@@ -5,12 +7,20 @@
   gap: 26px;
 
   &__action {
-    color: #808080;
+    color: $color-gray;
     font-weight: 500;
     font-size: 14px;
     line-height: 140%;
     &--link {
-      color: #327BFF;
+      color: $color-dodger-blue;
+    }
+  }
+
+  &__img {
+    width: 100%;
+
+    &--slack, &--teams {
+      width: 24px;
     }
   }
 
@@ -30,19 +40,19 @@
 
     &-title {
       margin: 0;
-      color: #343434;
+      color: $color-mine-shaft;
       font-weight: 500;
       font-size: 16px;
     }
   }
 
   &__img-wrapper {
-    width: 40px;
-    height: 40px;
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 1px solid #ECECED;
+    width: 40px;
+    height: 40px;
+    border: 1px solid $color-athens-gray;
     border-radius: 8px;
 
     & > svg {
