--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -1,10 +1,12 @@
+@import '../../variables.scss';
+
 * {
   box-sizing: border-box;
 }
 
 body {
   font-family: 'General Sans', sans-serif;
-  background-color: #ffffff;
+  background-color: $color-white;
 }
 
 button {
