--- a/src/components/Profile/Profile.scss
+++ b/src/components/Profile/Profile.scss
@@ -1,9 +1,11 @@
+@import '../../variables.scss';
+
 .profile {
   padding-top: 80px;
 
   &__title {
     margin: 0;
-    color: #343434;
+    color: $color-mine-shaft;
     font-weight: 500;
     font-size: 40px;
   }
@@ -16,12 +18,12 @@
   }
 
   &__block {
-    border: 1px solid #ECECED;
+    border: 1px solid $color-athens-gray;
     border-radius: 16px;
 
     &-title {
       margin: 0;
-      color: #343434;
+      color: $color-mine-shaft;
       font-weight: 600;
       font-size: 24px;
     }
@@ -30,7 +32,7 @@
       display: flex;
       flex-direction: column;
       margin-top: 6px;
-      color: #808080;
+      color: $color-gray;
       font-weight: 500;
       font-size: 16px;
       line-height: 21px;
@@ -38,20 +40,19 @@
 
     &-subtitle {
       margin: 0;
-      color: #343434;
+      color: $color-mine-shaft;
       font-weight: 600;
       font-size: 20px;
 
       &-content {
         display: flex;
         flex-direction: column;
-        // gap: 5px;
       }
 
       &-icon {
         width: 18px;
         margin-left: 7px;
-        color: #327BFF;
+        color: $color-dodger-blue;
       }
 
       &-btn {
@@ -59,10 +60,10 @@
         justify-content: center;
         padding: 10px 18px;
         border-radius: 16px;
-        color: #FFFFFF;
+        color: $color-white;
         font-weight: 600;
         font-size: 14px;
-        background-color: #327BFF;
+        background-color: $color-dodger-blue;
         align-items: center;
         gap: 4px;
         &-icon {
@@ -86,13 +87,12 @@
       display: flex;
       flex-direction: column;
       padding: 16px;
-      // gap: 5px;
 
       &:last-child {
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
-        background: rgba(50, 123, 255, 0.05);
+        background-color: $color-dodger-blue-transparent;
         padding-right: 32px;
       }
     }
@@ -109,7 +109,7 @@
         width: 40px;
         height: 32px;
         border-radius: 64px;
-        background-color: #343434;
+        background-color: $color-mine-shaft;
       }
 
       &--action {
@@ -123,15 +123,15 @@
         margin: auto;
         padding: 16px 32px;
         border-radius: 64px;
-        color: #ffffff;
+        color: $color-white;
         font-weight: 600;
         font-size: 16px;
         text-align: center;
-        background-color: #343434;
+        background-color: $color-mine-shaft;
       }
       &-icon {
         &--arrow-right {
-          color: #ffffff;
+          color: $color-white;
           width: 14px;
         }
       }
