--- a/src/components/Toggle/Toggle.scss
+++ b/src/components/Toggle/Toggle.scss
@@ -1,13 +1,15 @@
+@import '../../variables.scss';
+
 .toggle {
   position: relative;
   width: 51px;
   height: 31px;
   border-radius: 40px;
   cursor: pointer;
-  background: rgba(120, 120, 128, 0.16);
+  background-color: $color-jumbo-transparent;
 
-  &--true {
-    background-color: #327BFF;
+  &--active {
+    background-color: $color-dodger-blue;
   }
 
   &--disabled {
@@ -21,17 +23,13 @@
     width: 27px;
     height: 27px;
     border-radius: 100%;
-    background-color: #ffffff;
+    background-color: $color-white;
     transition: transform 0.3s;
-    transform: translateY(-50%);
+    transform: translate(11%, -50%);
     box-shadow: 0px 3px 8px 0px #00000026;
 
-    &--true{
+    &--active {
       transform: translate(79%, -50%);
-    }
-
-    &--false{
-      transform: translate(11%, -50%);
     }
   }
 }
